[package]
name = "ocl-include"
version = "0.5.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

description = "Simple preprocessor that implements #include mechanism for OpenCL source files "
documentation = "https://docs.rs/ocl-include"
homepage = "https://github.com/agerasev/ocl-include"
repository = "https://github.com/agerasev/ocl-include"
readme = "README.md"
keywords = ["opencl", "include", "preprocessor"]
categories = ["parser-implementations", "filesystem", "development-tools"]
license = "MIT/Apache-2.0"

[dependencies]
regex = "1"
lazy_static = "1.4"
uni-path = "1"

[dev-dependencies]
indoc = "1.0"
